# spath

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audit.rs  lib.rs  main.rs
src-tauri/src/analyzer/: mod.rs
src-tauri/src/fixer/: mod.rs
src-tauri/src/migrator/: mod.rs
src-tauri/src/registry/: mod.rs
src-tauri/src/scanner/: mod.rs
src-tauri/src/verifier/: mod.rs
