[package]
name = "spath-gui"
version = "0.1.0"
description = "spath - Windows PATH Security Scanner GUI"
authors = ["vremyavnikuda"]
edition = "2021"

[lib]
name = "spath_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
chrono = "0.4"
colored = "2.0"
fs2 = "0.4"
windows = { version = "0.52", features = ["Win32_System_Environment", "Win32_Foundation"] }
winreg = "0.52"
log = "0.4"
env_logger = "0.11"

